--- a/index.html
+++ b/index.html
@@ -20,11 +20,25 @@
         <section class="score">
             <div class="scorePlayer">
             <h2>PLAYER</h2>
+            <div class="imgchosen-player">
+            <div class="imgchosen-player-container">
+            <img src="assets/tesoura.png" class="scissorstomove-Player" alt="">
+            <img src="assets/pedra.png" class="rocktomove-Player" alt="">
+            <img src="assets/papel.png" class="papertomove-Player" alt="">
+            </div>
             <p><span id="PointHuman">0</span></p>
+            </div>
             </div>
             <div class="scoreMachine">
             <h2>CPU</h2>
+            <div class="imgchosen-machine">
             <p><span id="PointMachine">0</span></p>
+            <div class="imgchosen-machine-container">
+            <img src="assets/tesoura.png" class="scissorstomove-Machine" alt="">
+            <img src="assets/pedra.png" class="rocktomove-Machine" alt="">
+            <img src="assets/papel.png" class="papertomove-Machine" alt="">
+            </div>
+            </div>
             </div>
 
         </section>
@@ -33,14 +47,13 @@
 
                 <div class="moveselector-container">
 
-                    <h2>CHOOSE YOUR MOVE</h2>
+                    <h2 class="WhoWin">CHOOSE YOUR MOVE</h2>
 
                 <div class="img-container">
 
                 <div class="img-box">
 
                     <img  onclick="HumanMove('Rock')" src="assets/pedra.png" alt="">
-                    <img src="assets/pedra.png" class="rocktomove" alt="">
 
                     <p>ROCK</p>
                     
@@ -49,7 +62,7 @@
                 <div class="img-box">
                     
                     <img onclick="HumanMove('Paper')" src="assets/papel.png" class="paper" alt="">
-                    <img src="assets/papel.png" class="papertomove" alt="">
+
                     <p>PAPER</p>
 
                 </div>
@@ -57,7 +70,6 @@
                 <div class="img-box">
 
                     <img  onclick="HumanMove('Scissors')" src="assets/tesoura.png" alt="">
-                    <img src="assets/tesoura.png" class="scissorstomove" alt="">
 
                     <p>SCISSORS</p>
 
