--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         window.firestoreHelpers = { doc, setDoc, getDoc, onSnapshot };
     </script>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 
 </body>
 
