Adicionando animações novas de nomes e codigo de sala

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 <body>
 
     <main>
+
+        <p id="RoomInfo">Sala:</p>
+
         <h1>JOKENPÔ</h1>
 
         <section class="score">
             <div class="scorePlayer">
-                <h2>PLAYER</h2>
+                <h2 id="PlayerName">PLAYER</h2>
                 <div class="imgchosen-player">
                     <div class="imgchosen-player-container">
                         <img src="assets/tesoura.png" class="scissorstomove-Player" alt="">
@@ -29,7 +32,7 @@
                 </div>
             </div>
             <div class="scoreMachine">
-                <h2>OPPONENT</h2>
+                <h2 id="OpponentName">OPPONENT</h2>
                 <div class="imgchosen-machine">
                     <p><span id="PointMachine">0</span></p>
                     <div class="imgchosen-machine-container">
