Corrigindo bug no JS e adicionando explicação do projeto

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main>
 
         <p id="RoomInfo">Sala:</p>
+        <a href="https://github.com/LuccasDutraF/Jokenpo-JS?tab=readme-ov-file#jokenpo-js" class="linkSala">Para saber como jogar clique aqui</a>
 
         <h1>JOKENPÔ</h1>
 
