--- a/index.html
+++ b/index.html
@@ -68,29 +68,31 @@
         <button class="StartGame">START</button>
     </main>
 
-    <!-- Firebase SDK -->
-     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-        import { getFirestore, doc, setDoc, onSnapshot, updateDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getFirestore, doc, setDoc, onSnapshot, updateDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyDDauWJBpOUUdsbtHW4ov4wiFkVRv4j4NI",
-            authDomain: "jokenpomultiplayer.firebaseapp.com",
-            projectId: "jokenpomultiplayer",
-            storageBucket: "jokenpomultiplayer.appspot.com",
-            messagingSenderId: "841092414228",
-            appId: "1:841092414228:web:4bf6942774c5a64a422001"
-        };
+    const firebaseConfig = {
+      apiKey: "AIzaSyDDauWJBpOUUdsbtHW4ov4wiFkVRv4j4NI",
+      authDomain: "jokenpomultiplayer.firebaseapp.com",
+      projectId: "jokenpomultiplayer",
+      storageBucket: "jokenpomultiplayer.appspot.com",
+      messagingSenderId: "841092414228",
+      appId: "1:841092414228:web:4bf6942774c5a64a422001"
+    };
 
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-        window.db = db;
-        window.firestoreHelpers = { doc, setDoc, onSnapshot, updateDoc };
-    </script>
+    // expõe para script.js
+    window.db = db;
+    window.firestoreHelpers = { doc, setDoc, onSnapshot, updateDoc };
+  </script>
 
-    <!-- Seu código principal -->
-    <script src="script.js"></script>
+  <!-- Seu JS vem por último (garante Firebase pronto) -->
+  <script src="script.js?v=1"></script>
+</body>
+</html>
 </body>
 
 </html>
