Adicionando campo para procurar Salas

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
 <body>
 
+    <div class="room-setup">
+  <input type="text" id="RoomInput" placeholder="Digite o nome da sala" />
+  <button onclick="setRoom()" class="buttonEnter">Entrar</button>
+</div>
+
     <main>
         <h1>JOKENPÔ</h1>
 
